--- a/index.html
+++ b/index.html
@@ -3,10 +3,42 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
+    <header>
+      <h1>Kitties to go!!</h1>
+      <h2>Seattle's premiere drive-thru cat rentals</h2>
+    </header>
+    <nav>
+      <a href="#">About</a>
+      <a href="#">Rates</a>
+      <a href="#">Liability Release</a>
+      <a href="#">Kitty Profiles</a>
+      <a href="#">Book a Cat</a>
+    </nav>
     <main>
-      
+      <article class="article">
+
+      </article>
+      <aside class="aside">
+        <section>
+          <h3>Cats in the News</h3>
+          <p>Chew iPad cord why must they do that, grab pompom and put in water dish.</p>
+          <a href="#">Find out more >></a>
+          <p>Chew iPad cord why must they do that, grab pompom and put in water dish.</p>
+          <a href="#">Find out more >></a>
+        </section>
+        <section>
+          <h3>Cat of the Week</h3>
+          <figure>
+            <img src="images/sidebar-cat-img.jpg" alt="cat">
+            <figcaption>Stare at imaginery bug love blinks and purr purr purr purr.</figcaption>
+          </figure>
+        </section>
+      </aside>
     </main>
+    <footer class="clearfix">
+    </footer>
   </body>
 </html>
