--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
       <h2>Seattle's premiere drive-thru cat rentals</h2>
     </header>
     <nav>
-      <a href="#">About</a>
-      <a href="#">Rates</a>
-      <a href="#">Liability Release</a>
-      <a href="#">Kitty Profiles</a>
-      <a href="#">Book a Cat</a>
+      <li><a href="#">About</a></li>
+      <li>/</li>
+      <li><a href="#">Rates</a></li>
+      <li>/</li>
+      <li><a href="#">Liability Release</a></li>
+      <li>/</li>
+      <li><a href="#">Kitty Profiles</a></li>
+      <li>/</li>
+      <li><a href="#">Book a Cat</a></li>
     </nav>
     <main>
       <article class="article">
-
+        <h4>Cat ipsum dolor sit amet, be a nyan cat, feel great about it, be annoying 24/7 poop rainbows in litter box all day but leave fur on owners clothes. </h4>
       </article>
       <aside class="aside">
         <section>
@@ -38,7 +42,11 @@
         </section>
       </aside>
     </main>
-    <footer class="clearfix">
+    <footer>
+      <img src="images/cat-logo.png" alt="cat logo">
+      <p>
+        Weigh eight pounds but take up a full-size bed. Meoooow cough mew mew and sit on human.
+      </p>
     </footer>
   </body>
 </html>
