Finished the header I think

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>Kitties to go!!</h1>
+      <h1>Kitties to go!</h1>
       <h2>Seattle's premiere drive-thru cat rentals</h2>
     </header>
     <nav>
@@ -23,7 +23,9 @@
     </nav>
     <main>
       <article class="article">
-        <h4>Cat ipsum dolor sit amet, be a nyan cat, feel great about it, be annoying 24/7 poop rainbows in litter box all day but leave fur on owners clothes. </h4>
+        <section>
+          <h4>Cat ipsum dolor sit amet, be a nyan cat, feel great about it, be annoying 24/7 poop rainbows in litter box all day but leave fur on owners clothes. </h4>
+        </section>
       </article>
       <aside class="aside">
         <section>
