Finished main part of the page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
       <article class="article">
         <section>
           <h4>Cat ipsum dolor sit amet, be a nyan cat, feel great about it, be annoying 24/7 poop rainbows in litter box all day but leave fur on owners clothes. </h4>
+          <p>Cat ipsum dolor sit amet, i shall purr myself to sleep or unwrap toilet paper. Sleep on dog bed, force dog to sleep on floor claw at curtains stretch and yawn <a href="#">nibble on tuna</a> ignore human bite human hand so go crazy with excitement when plates are clanked together signalling the arrival of cat food russian blue.</p>
+          <p class="quote">Please stop looking at your phone and pet me. Lounge in the doorway eat and then sleep on your face meowwww meowwww <i>- Jeremy</i></p>
+        </section>
+        <section>
+          <h3>The Kitties to go story</h3>
+          <p>Meow loudly just to annoy owners yowling nonstop the whole night, so snuggles up to shoulders or knees and <a href="#">purrs you to sleep</a> yet hopped up on catnip, so funny little cat chirrup noise shaking upright tail when standing next to you curl up and sleep on the freshly laundered towels, chase little red dot someday it will be mine!</p>
+          <p>Gimme attention gimme attention gimme attention gimme attention gimme attention gimme attention just kidding i don't want it anymore meow bye attack feet. I love cuddles haha you hold me hooman i scratch for sit in a box for hours really likes hummus or touch my tail. </p>
         </section>
       </article>
       <aside class="aside">
@@ -41,6 +48,7 @@
             <img src="images/sidebar-cat-img.jpg" alt="cat">
             <figcaption>Stare at imaginery bug love blinks and purr purr purr purr.</figcaption>
           </figure>
+          <a href="#">Find out more >></a>
         </section>
       </aside>
     </main>
