Finished 2nd page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Kitties To Go</title>
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
@@ -11,7 +11,7 @@
       <h2>Seattle's premiere drive-thru cat rentals</h2>
     </header>
     <nav>
-      <li><a href="#">About</a></li>
+      <li><a href="about.html">About</a></li>
       <li>/</li>
       <li><a href="#">Rates</a></li>
       <li>/</li>
@@ -54,9 +54,21 @@
     </main>
     <footer>
       <img src="images/cat-logo.png" alt="cat logo">
-      <p>
-        Weigh eight pounds but take up a full-size bed. Meoooow cough mew mew and sit on human.
-      </p>
+      <section>
+        <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+        </p>
+        <nav>
+          <li><a href="#">Footer link 1</a></li>
+          <li>/</li>
+          <li><a href="#">Footer link 2</a></li>
+          <li>/</li>
+          <li><a href="#">Footer link 3</a></li>
+          <li>/</li>
+          <li><a href="#">Footer link 4</a></li>
+        </nav>
+        <p>&copy; 2018 Kitties To Go!, LLC&emsp;|&emsp;Seattle, WA</p>
+      </section>
     </footer>
   </body>
 </html>
