Made small edits

--- a/about.html
+++ b/about.html
@@ -27,8 +27,7 @@
         <section>
           <h3>About Kitties To Go</h3>
           <p>Cat ipsum dolor sit amet, step on your keyboard while you're gaming and then turn in a circle or stare out the window cat fur is the new black . Pose purrfectly to show my beauty find empty spot in cupboard and sleep all day. Make muffins. Hunt by meowing loudly at 5am next to human slave food dispenser hate dog catch eat throw up catch eat throw up bad birds yet shove bum in owner's face like camera lens spend all night ensuring people don't sleep sleep all day but kitten is playing with dead mouse. Terrorize the hundred-and-twenty-pound rottweiler and steal his bed, not sorry meow meow, i tell my human man running from cops stops to pet cats, goes to jail or attack curtains. If it fits, i sits sweet beast, for catch eat throw up catch eat throw up bad birds. <a href="#">Cattt catt cattty cat</a> being a cat meow all night having their mate disturbing sleeping humans, but scoot butt on the rug lick master's hand at first then bite because im moody and eat an easter feather as if it were a bird then burp victoriously, but tender i like to spend my days sleeping and eating fishes that my human fished for me we live on a luxurious yacht, sailing proudly under the sun, i like to walk on the deck, watching the horizon, dreaming of a good bowl of milk poop on the floor, break a planter, sprint, eat own hair, vomit hair, hiss, chirp at birds, eat a squirrel, hide from fireworks, lick toe beans, attack christmas tree.</p>
-          <p class="quote">Chase ball of string drink water out of the faucet, meow in empty rooms for scratch me now! stop scratching me!.
-<i>- Kitties To Go</i></p>
+          <p class="quote">Chase ball of string drink water out of the faucet, meow in empty rooms for scratch me now! stop scratching me!. <i>-- Kitties To Go</i></p>
         </section>
       </article>
     </main>
