--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <article class="article">
         <section>
           <h4>Cat ipsum dolor sit amet, be a nyan cat, feel great about it, be annoying 24/7 poop rainbows in litter box all day but leave fur on owners clothes. </h4>
-          <p>Cat ipsum dolor sit amet, i shall purr myself to sleep or unwrap toilet paper. Sleep on dog bed, force dog to sleep on floor claw at curtains stretch and yawn <a href="#">nibble on tuna</a> ignore human bite human hand so go crazy with excitement when plates are clanked together signalling the arrival of cat food russian blue.</p>
-          <p class="quote">Please stop looking at your phone and pet me. Lounge in the doorway eat and then sleep on your face meowwww meowwww <i>- Jeremy</i></p>
+          <p>Cat ipsum dolor sit amet, i shall purr myself to sleep or unwrap toilet paper. Sleep on dog bed, force dog to sleep on floor claw at curtains stretch and yawn <a href="#">nibble on tuna</a> ignore human bite human hand so go crazy with excitement when plates are clanked together signalling the arrival of cat food russian blue. Hunt by meowing loudly at 5am next to human slave food dispenser.</p>
+          <p class="quote">Please stop looking at your phone and pet me. Lounge in the doorway eat and then sleep on your face meowwww meowwww <i>-- Jeremy</i></p>
         </section>
         <section>
           <h3>The Kitties to go story</h3>
@@ -35,12 +35,16 @@
         </section>
       </article>
       <aside class="aside">
-        <section>
+        <section class="cats-in-the-news">
           <h3>Cats in the News</h3>
-          <p>Chew iPad cord why must they do that, grab pompom and put in water dish.</p>
-          <a href="#">Find out more >></a>
-          <p>Chew iPad cord why must they do that, grab pompom and put in water dish.</p>
-          <a href="#">Find out more >></a>
+          <section class="cat-in-news">
+            <p>Chew iPad cord why must they do that, grab pompom and put in water dish.</p>
+            <a href="#">Find out more >></a>
+          </section>
+          <section class="cat-in-news">
+            <p>Chew iPad cord why must they do that, grab pompom and put in water dish.</p>
+            <a href="#">Find out more >></a>
+          </section>
         </section>
         <section>
           <h3>Cat of the Week</h3>
@@ -48,7 +52,7 @@
             <img src="images/sidebar-cat-img.jpg" alt="cat">
             <figcaption>Stare at imaginery bug love blinks and purr purr purr purr.</figcaption>
           </figure>
-          <a href="#">Find out more >></a>
+          <a href="#">Book Now >></a>
         </section>
       </aside>
     </main>
