made the left/right margins a little bigger

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         </section>
       </article>
     </main>
-    <footer>
+    <footer class="footer">
       <img src="images/cat-logo.png" alt="cat logo">
       <section>
         <p>
