--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section>
           <h4>Cat ipsum dolor sit amet, be a nyan cat, feel great about it, be annoying 24/7 poop rainbows in litter box all day but leave fur on owners clothes. </h4>
           <p>Cat ipsum dolor sit amet, i shall purr myself to sleep or unwrap toilet paper. Sleep on dog bed, force dog to sleep on floor claw at curtains stretch and yawn <a href="#">nibble on tuna</a> ignore human bite human hand so go crazy with excitement when plates are clanked together signalling the arrival of cat food russian blue. Hunt by meowing loudly at 5am next to human slave food dispenser.</p>
-          <p class="quote">Please stop looking at your phone and pet me. Lounge in the doorway eat and then sleep on your face meowwww meowwww <i>-- Jeremy</i></p>
+          <p class="quote">Please stop looking at your phone and pet me. Lounge in the doorway eat and then sleep on your face meowwww meowwww <i>- Jeremy</i></p>
         </section>
         <section>
           <h3>The Kitties to go story</h3>
