Added accessibility changes

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>About Kitties To Go</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/stylesheet.css">
   </head>
   <body>
     <header>
@@ -11,19 +11,19 @@
       <h2>Seattle's premiere drive-thru cat rentals</h2>
     </header>
     <nav>
-      <li><a href="about.html">About</a></li>
-      <li>/</li>
-      <li><a href="#">Rates</a></li>
-      <li>/</li>
-      <li><a href="#">Liability Release</a></li>
-      <li>/</li>
-      <li><a href="#">Kitty Profiles</a></li>
-      <li>/</li>
-      <li><a href="#">Book a Cat</a></li>
+      <span><a href="about.html">About</a></span>
+      <span>/</span>
+      <span><a href="#">Rates</a></span>
+      <span>/</span>
+      <span><a href="#">Liability Release</a></span>
+      <span>/</span>
+      <span><a href="#">Kitty Profiles</a></span>
+      <span>/</span>
+      <span><a href="#">Book a Cat</a></span>
     </nav>
     <main>
       <article class="about">
-        <img src="images/banner-img.jpg" alt="Cat banner img">
+        <img src="images/banner-img.jpg" alt="Part of a cat showing their eyes wide open">
         <section>
           <h3>About Kitties To Go</h3>
           <p>Cat ipsum dolor sit amet, step on your keyboard while you're gaming and then turn in a circle or stare out the window cat fur is the new black . Pose purrfectly to show my beauty find empty spot in cupboard and sleep all day. Make muffins. Hunt by meowing loudly at 5am next to human slave food dispenser hate dog catch eat throw up catch eat throw up bad birds yet shove bum in owner's face like camera lens spend all night ensuring people don't sleep sleep all day but kitten is playing with dead mouse. Terrorize the hundred-and-twenty-pound rottweiler and steal his bed, not sorry meow meow, i tell my human man running from cops stops to pet cats, goes to jail or attack curtains. If it fits, i sits sweet beast, for catch eat throw up catch eat throw up bad birds. <a href="#">Cattt catt cattty cat</a> being a cat meow all night having their mate disturbing sleeping humans, but scoot butt on the rug lick master's hand at first then bite because im moody and eat an easter feather as if it were a bird then burp victoriously, but tender i like to spend my days sleeping and eating fishes that my human fished for me we live on a luxurious yacht, sailing proudly under the sun, i like to walk on the deck, watching the horizon, dreaming of a good bowl of milk poop on the floor, break a planter, sprint, eat own hair, vomit hair, hiss, chirp at birds, eat a squirrel, hide from fireworks, lick toe beans, attack christmas tree.</p>
@@ -32,19 +32,19 @@
       </article>
     </main>
     <footer class="footer">
-      <img src="images/cat-logo.png" alt="cat logo">
+      <img src="images/cat-logo.png" alt="Kitties-to-Go logo">
       <section>
         <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
         </p>
         <nav>
-          <li><a href="#">Footer link 1</a></li>
-          <li>/</li>
-          <li><a href="#">Footer link 2</a></li>
-          <li>/</li>
-          <li><a href="#">Footer link 3</a></li>
-          <li>/</li>
-          <li><a href="#">Footer link 4</a></li>
+          <span><a href="#">Footer link 1</a></span>
+          <span>/</span>
+          <span><a href="#">Footer link 2</a></span>
+          <span>/</span>
+          <span><a href="#">Footer link 3</a></span>
+          <span>/</span>
+          <span><a href="#">Footer link 4</a></span>
         </nav>
         <p>&copy; 2018 Kitties To Go!, LLC&emsp;|&emsp;Seattle, WA</p>
       </section>
