--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Kitties To Go</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <title>Kitties To Go Cat Rentals</title>
+    <link rel="stylesheet" href="styles/stylesheet.css">
   </head>
   <body>
     <header>
@@ -11,15 +11,15 @@
       <h2>Seattle's premiere drive-thru cat rentals</h2>
     </header>
     <nav>
-      <li><a href="about.html">About</a></li>
-      <li>/</li>
-      <li><a href="#">Rates</a></li>
-      <li>/</li>
-      <li><a href="#">Liability Release</a></li>
-      <li>/</li>
-      <li><a href="#">Kitty Profiles</a></li>
-      <li>/</li>
-      <li><a href="#">Book a Cat</a></li>
+      <span><a href="about.html">About</a></span>
+      <span>/</span>
+      <span><a href="#">Rates</a></span>
+      <span>/</span>
+      <span><a href="#">Liability Release</a></span>
+      <span>/</span>
+      <span><a href="#">Kitty Profiles</a></span>
+      <span>/</span>
+      <span><a href="#">Book a Cat</a></span>
     </nav>
     <main>
       <article class="article">
@@ -49,7 +49,7 @@
         <section>
           <h3>Cat of the Week</h3>
           <figure>
-            <img src="images/sidebar-cat-img.jpg" alt="cat">
+            <img src="images/sidebar-cat-img.jpg" alt="A cat with their eyes wide open">
             <figcaption>Stare at imaginery bug love blinks and purr purr purr purr.</figcaption>
           </figure>
           <a href="#">Book Now >></a>
@@ -57,19 +57,19 @@
       </aside>
     </main>
     <footer>
-      <img src="images/cat-logo.png" alt="cat logo">
+      <img src="images/cat-logo.png" alt="Kitties-to-Go logo">
       <section>
         <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
         </p>
         <nav>
-          <li><a href="#">Footer link 1</a></li>
-          <li>/</li>
-          <li><a href="#">Footer link 2</a></li>
-          <li>/</li>
-          <li><a href="#">Footer link 3</a></li>
-          <li>/</li>
-          <li><a href="#">Footer link 4</a></li>
+          <span><a href="#">Footer 1</a></span>
+          <span>/</span>
+          <span><a href="#">Footer 2</a></span>
+          <span>/</span>
+          <span><a href="#">Footer 3</a></span>
+          <span>/</span>
+          <span><a href="#">Footer 4</a></span>
         </nav>
         <p>&copy; 2018 Kitties To Go!, LLC&emsp;|&emsp;Seattle, WA</p>
       </section>
